[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotenv-diff"
version = "0.1.0"
description = "Compare dotenv files and find missing, extra, and empty variables."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "bam0ny" }
]
keywords = ["dotenv", "env", "cli", "configuration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
dotenv-diff = "dotenv_diff.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dotenv_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
